examples/errors/parsing/sort_enum-missing-bar.cn
sort Direction = { North : () South : () | East : () | West : () }

main : () [impure] = ()
